[gd_scene load_steps=30 format=2]

[ext_resource path="res://Character/Eye_bot_red.gd" type="Script" id=1]
[ext_resource path="res://Graphics/Eye/eye_blink/eye_blinkFrame1.png" type="Texture" id=2]
[ext_resource path="res://Graphics/Eye/eye_blink/eye_blinkCopy_Frame1.png" type="Texture" id=3]
[ext_resource path="res://Graphics/Eye/eye_blink/eye_blinkCopy_Copy_Frame1.png" type="Texture" id=4]
[ext_resource path="res://Graphics/Eye/eye_blink/eye_blinkCopy_Copy_Copy_Frame1.png" type="Texture" id=5]
[ext_resource path="res://Graphics/Eye/eye_blink/eye_blinkCopy_Copy_Copy_Copy_Frame1.png" type="Texture" id=6]
[ext_resource path="res://Graphics/Eye/eye_blink/eye_blinkCopy_Copy_Copy_Copy_Copy_Frame1.png" type="Texture" id=7]
[ext_resource path="res://Graphics/Eye/Tentacules/Tentacules1.png" type="Texture" id=8]
[ext_resource path="res://Graphics/Eye/Tentacules/Tentacules2.png" type="Texture" id=9]
[ext_resource path="res://Graphics/Eye/Tentacules/Tentacules3.png" type="Texture" id=10]
[ext_resource path="res://Graphics/Eye/Tentacules/Tentacules4.png" type="Texture" id=11]
[ext_resource path="res://Graphics/Eye/Tentacules/Tentacules5.png" type="Texture" id=12]
[ext_resource path="res://Graphics/Eye/Tentacules/Tentacules6.png" type="Texture" id=13]
[ext_resource path="res://Graphics/Eye/Tentacules/Tentacules7.png" type="Texture" id=14]
[ext_resource path="res://Graphics/Eye/Tentacules/Tentacules8.png" type="Texture" id=15]
[ext_resource path="res://Graphics/Eye/Tentacules/Tentacules9.png" type="Texture" id=16]
[ext_resource path="res://Graphics/interface/bar_vie/bar_vie.png" type="Texture" id=17]
[ext_resource path="res://Graphics/interface/bar_vie/vie.png" type="Texture" id=18]
[ext_resource path="res://Graphics/interface/bar_vie/vie_divine_shield.png" type="Texture" id=19]
[ext_resource path="res://Graphics/interface/bar_vie/bar_vie_divine_shield.png" type="Texture" id=20]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": false,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="Animation" id=3]
resource_name = "mouv"
length = 1.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("../..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_push"
} ]
}

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ null ],
"loop": true,
"name": "off",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ) ],
"loop": true,
"name": "divine_shield",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 19 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "off",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=6]
radius = 12.0

[sub_resource type="Animation" id=7]
resource_name = "Eye_aim"
length = 2.0
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("eye_spr:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_shoot"
} ]
}

[sub_resource type="Animation" id=8]
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("eye_spr:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 3.6, 3.7, 3.8, 3.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 3, 2, 1, 0, 0, 1, 2, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 5, -4 ), Vector2( 8, 6 ), Vector2( -6, 2 ) ]
}

[sub_resource type="CircleShape2D" id=9]
radius = 300.0

[node name="offset_setup" type="Node2D"]

[node name="offset_setup_2" type="Node2D" parent="."]

[node name="Eye" type="RigidBody2D" parent="offset_setup_2" groups=[
"Character_red",
"Eye",
]]
collision_layer = 2
collision_mask = 142
mode = 2
custom_integrator = true
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="eye_spr" type="AnimatedSprite" parent="offset_setup_2/Eye"]
frames = SubResource( 1 )
animation = "idle"
frame = 5
__meta__ = {
"_edit_lock_": true
}

[node name="tentacules" type="AnimatedSprite" parent="offset_setup_2/Eye/eye_spr"]
show_behind_parent = true
frames = SubResource( 2 )
animation = "idle"
frame = 1
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="tent" type="AnimationPlayer" parent="offset_setup_2/Eye/eye_spr/tentacules"]
anims/mouv = SubResource( 3 )

[node name="barre_vie" type="AnimatedSprite" parent="offset_setup_2/Eye/eye_spr"]
frames = SubResource( 4 )
offset = Vector2( 3, -15 )

[node name="vie" type="TextureProgress" parent="offset_setup_2/Eye/eye_spr/barre_vie"]
margin_left = -5.0
margin_top = -28.0
margin_right = 35.0
margin_bottom = 12.0
value = 100.0
texture_progress = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="divine_shield" type="AnimatedSprite" parent="offset_setup_2/Eye/eye_spr/barre_vie"]
position = Vector2( -3.008, -24.152 )
frames = SubResource( 5 )
animation = "off"
centered = false

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="offset_setup_2/Eye"]
position = Vector2( 5, -0.5 )
shape = SubResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="offset_setup_2/Eye"]
anims/Eye_aim = SubResource( 7 )
anims/eye_idle = SubResource( 8 )

[node name="aim_check" type="Area2D" parent="offset_setup_2/Eye"]
collision_layer = 0
collision_mask = 2180

[node name="aim" type="CollisionShape2D" parent="offset_setup_2/Eye/aim_check"]
position = Vector2( 286.734, 0 )
shape = SubResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[node name="shoot_point" type="Position2D" parent="offset_setup_2/Eye"]
position = Vector2( 14.992, -1.152 )
__meta__ = {
"_edit_lock_": true
}
[connection signal="body_entered" from="offset_setup_2/Eye/aim_check" to="offset_setup_2/Eye" method="_on_aim_check_body_entered"]
